--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Bocor Bootstrap Template - Index</title>
+  <title>DSK BUILDCON & INFRA PRIVATE LIMITED</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -28,8 +28,8 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Bocor - v4.7.1
-  * Template URL: https://bootstrapmade.com/bocor-bootstrap-template-nice-animation/
+  * Template Name: DSK BUILDCON & INFRA PRIVATE LIMITED - v4.7.1
+  * Template URL: https://bootstrapmade.com/DSK BUILDCON & INFRA PRIVATE LIMITED-bootstrap-template-nice-animation/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
@@ -42,7 +42,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html">Bocor<span>.</span></a></h1>
+        <h1><a href="index.html">DSK BUILDCON & INFRA PRIVATE LIMITED<span>.</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -86,7 +86,7 @@
     <div class="container">
       <div class="row d-flex align-items-center"">
       <div class=" col-lg-6 py-5 py-lg-0 order-2 order-lg-1" data-aos="fade-right">
-        <h1>Your new digital experience with Bocor</h1>
+        <h1>Your new digital experience with DSK BUILDCON & INFRA PRIVATE LIMITED</h1>
         <h2>We are team of talented designers making websites with Bootstrap</h2>
         <a href="#about" class="btn-get-started scrollto">Get Started</a>
       </div>
@@ -155,9 +155,9 @@
           <div class="image col-xl-5"></div>
           <div class="col-xl-7">
             <div class="content d-flex flex-column justify-content-center ps-0 ps-xl-4">
-              <h3 data-aos="fade-in" data-aos-delay="100">Voluptatem dignissimos provident quasi</h3>
+              <h3 data-aos="fade-in" data-aos-delay="100"> As Per Registration of Company,</h3>
               <p data-aos="fade-in">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                It involves under in Business Activity Class / Subclass Code 70109, Main Activity of the said Company DSK BUILDCON & INFRA PRIVATE LIMITED is : , Real estate activities with own or leased property n.e.c, It Comes Under Division REAL ESTATE ACTIVITIES and this come under scetion REAL ESTATE, RENTING AND BUSINESS ACTIVITIES.
               </p>
               <div class="row gy-4 mt-3">
                 <div class="col-md-6 icon-box" data-aos="fade-up">
@@ -253,7 +253,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Features Section ======= -->
-    <section id="features" class="features section-bg">
+    <!-- <section id="features" class="features section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -330,7 +330,8 @@
         </div>
 
       </div>
-    </section><!-- End Features Section -->
+    </section> -->
+    <!-- End Features Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
@@ -490,12 +491,12 @@
       <div class="container">
 
         <div class="section-title">
-          <h2 data-aos="fade-in">Team</h2>
-          <p data-aos="fade-in">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2 data-aos="fade-in">Directors</h2>
+          <!-- <p data-aos="fade-in">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
-          <div class="col-xl-3 col-lg-4 col-md-6">
+          <!-- <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="member" data-aos="fade-up">
               <div class="pic"><img src="assets/img/team/team-1.jpg" alt=""></div>
               <h4>Walter White</h4>
@@ -507,27 +508,15 @@
                 <a href=""><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
 
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/team-2.jpg" alt=""></div>
-              <h4>Sarah Jhinson</h4>
-              <span>Product Manager</span>
-              <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
+        
 
-          <div class="col-xl-3 col-lg-4 col-md-6">
+          <div class="col-xl-6 col-lg-6 col-md-6">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="pic"><img src="assets/img/team/team-3.jpg" alt=""></div>
-              <h4>William Anderson</h4>
-              <span>CTO</span>
+              <h4>SUSHEEL KUMAR</h4>
+              <!-- <span>CTO</span> -->
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
@@ -536,8 +525,20 @@
               </div>
             </div>
           </div>
-
-          <div class="col-xl-3 col-lg-4 col-md-6">
+          <div class="col-xl-6 col-lg-6 col-md-6">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="pic"><img src="assets/img/team/team-2.jpg" alt=""></div>
+              <h4>DHARAMVATI</h4>
+              <!-- <span>Product Manager</span> -->
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="pic"><img src="assets/img/team/team-4.jpg" alt=""></div>
               <h4>Amanda Jepson</h4>
@@ -549,7 +550,7 @@
                 <a href=""><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
 
       </div>
@@ -617,17 +618,17 @@
 
         <div class="section-title">
           <h2 data-aos="fade-in">Frequently Asked Questions</h2>
-          <p data-aos="fade-in">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <!-- <p data-aos="fade-in">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up">
           <div class="col-lg-5">
             <i class="bx bx-help-circle"></i>
-            <h4>Non consectetur a erat nam at lectus urna duis?</h4>
+            <h4>Where is DSK BUILDCON & INFRA PRIVATE LIMITED Registered ?</h4>
           </div>
           <div class="col-lg-7">
             <p>
-              Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+              DSK BUILDCON & INFRA PRIVATE LIMITED Is Registered in Haryana state under ROC-DELHI, And Registered Office is - HOUSE NO-139,WARD NO-4 HARI NAGARSOHNA SOHNA, Gurgaon, INDIA, 122103.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -635,11 +636,11 @@
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-5">
             <i class="bx bx-help-circle"></i>
-            <h4>Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?</h4>
+            <h4>How We can Contact Company for Our Concern/Issue/Query ?</h4>
           </div>
           <div class="col-lg-7">
             <p>
-              Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim.
+              You can Directly mail to Company Registered Email Id Which you Have Seen Above on Detail. Also You Can post Your Query/concern/issue/feedback With The Given Form In Company Location Page. Your Query/concern/feedback/issue Directly Go to Company Email ID with Us. Also you can See Company Response on Your Feedback/Query/concern/issue in Our Customer Desk.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -647,11 +648,11 @@
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
           <div class="col-lg-5">
             <i class="bx bx-help-circle"></i>
-            <h4>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi?</h4>
+            <h4>CURRENT STATUS OF DSK BUILDCON & INFRA PRIVATE LIMITED</h4>
           </div>
           <div class="col-lg-7">
             <p>
-              Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus.
+              CURRENT STATUS OF DSK BUILDCON & INFRA PRIVATE LIMITED IS ACTIVE.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -659,11 +660,11 @@
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
           <div class="col-lg-5">
             <i class="bx bx-help-circle"></i>
-            <h4>Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?</h4>
+            <h4>What is financial status of DSK BUILDCON & INFRA PRIVATE LIMITED ?</h4>
           </div>
           <div class="col-lg-7">
             <p>
-              Aperiam itaque sit optio et deleniti eos nihil quidem cumque. Voluptas dolorum accusantium sunt sit enim. Provident consequuntur quam aut reiciendis qui rerum dolorem sit odio. Repellat assumenda soluta sunt pariatur error doloribus fuga.
+              As per Current Record With Us, DSK BUILDCON & INFRA PRIVATE LIMITED Authorised Capital (Rs): 100000 & Paid up Capital(Rs) : 100000.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -671,11 +672,11 @@
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
           <div class="col-lg-5">
             <i class="bx bx-help-circle"></i>
-            <h4>Tempus quam pellentesque nec nam aliquam sem et tortor consequat?</h4>
+            <h4>When DSK BUILDCON & INFRA PRIVATE LIMITED was incorporated?</h4>
           </div>
           <div class="col-lg-7">
             <p>
-              Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
+              The Company Was incorporated on Dated - 08-Sep-2016.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -689,7 +690,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        
         </div>
 
         <div class="row">
@@ -701,21 +702,21 @@
                 <div class="info-box" data-aos="fade-up">
                   <i class="bx bx-map"></i>
                   <h3>Our Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>HOUSE NO-139,WARD NO-4 HARI NAGAR SOHNA, Gurgaon HR 122103 IN</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>info@example.com<br>contact@example.com</p>
+                  <p>sunilmaheshwar@gmail.com<br>deepak1997gnl@gmail.com</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Us</h3>
-                  <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
+                  <p>+1 5589 55488 55<br>+91 9896125208</p>
                 </div>
               </div>
             </div>
@@ -763,7 +764,7 @@
 
         <div class="row  justify-content-center">
           <div class="col-lg-6">
-            <h3>Bocor</h3>
+            <h3>DSK BUILDCON & INFRA PRIVATE LIMITED</h3>
             <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
           </div>
         </div>
@@ -789,13 +790,13 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>Bocor</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>DSK BUILDCON & INFRA PRIVATE LIMITED</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bocor-bootstrap-template-nice-animation/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/DSK BUILDCON & INFRA PRIVATE LIMITED-bootstrap-template-nice-animation/ -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
