--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
           </div>
           <div class="col-lg-7">
             <p>
-              DSK BUILDCON & INFRA PRIVATE LIMITED Is Registered in Haryana state under ROC-DELHI, And Registered Office is - HOUSE NO-139,WARD NO-4 HARI NAGARSOHNA SOHNA, Gurgaon, INDIA, 122103.
+              DSK BUILDCON & INFRA PRIVATE LIMITED Is Registered in Haryana state under ROC-DELHI, And Registered Office Address is - Hari Nagar Ward No-04 Sohna Distt. Gurugram PINCODE-122103.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -688,7 +688,7 @@
           </div>
           <div class="col-lg-7">
             <p>
-              You can Directly mail to Company Registered Email Id Which you Have Seen Above on Detail. Also You Can post Your Query/concern/issue/feedback With The Given Form In Company Location Page. Your Query/concern/feedback/issue Directly Go to Company Email ID with Us. Also you can See Company Response on Your Feedback/Query/concern/issue in Our Customer Desk.
+              You can Directly mail to Company Registered Email Id dskbuildconinfra@gmail.com. Also You Can post Your Query/concern/feedback With The Given Form In Contact Section Below.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -696,11 +696,11 @@
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
           <div class="col-lg-5">
             <i class="bx bx-help-circle"></i>
-            <h4>CURRENT STATUS OF DSK BUILDCON & INFRA PRIVATE LIMITED</h4>
+            <h4> What is the Current Status of DSK BUILDCON & INFRA PRIVATE LIMITED</h4>
           </div>
           <div class="col-lg-7">
             <p>
-              CURRENT STATUS OF DSK BUILDCON & INFRA PRIVATE LIMITED IS ACTIVE.
+              Current Status of BUILDCON & INFRA PRIVATE LIMITED is Active .
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -708,14 +708,15 @@
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
           <div class="col-lg-5">
             <i class="bx bx-help-circle"></i>
-            <h4>What is financial status of DSK BUILDCON & INFRA PRIVATE LIMITED ?</h4>
+            <h4>What is Nature Of Business ?</h4>
           </div>
           <div class="col-lg-7">
             <p>
-              As per Current Record With Us, DSK BUILDCON & INFRA PRIVATE LIMITED Authorised Capital (Rs): 100000 & Paid up Capital(Rs) : 100000.
+               DSK BUILDCON & INFRA PRIVATE LIMITED is Service Providing Company
             </p>
           </div>
-        </div><!-- End F.A.Q Item-->
+        </div>
+        <!-- End F.A.Q Item-->
 
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
           <div class="col-lg-5">
@@ -724,7 +725,7 @@
           </div>
           <div class="col-lg-7">
             <p>
-              The Company Was incorporated on Dated - 08-Sep-2016.
+              The Company Was incorporated in Year 2001.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
