--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
     <!-- End Pricing Section -->
 
      <!-- ======= Testimonials Section ======= -->
-     <section id="testimonials" class="testimonials">
+     <!-- <section id="testimonials" class="testimonials">
 
       <div class="container" data-aos="fade-up">
         <div class="section-title">
@@ -695,10 +695,7 @@
           <p>What they are saying about us</p>
          
         </div>
-        <!-- <header class="section-header">
-          <h2>Testimonials</h2>
-          <p>What they are saying about us</p>
-        </header> -->
+      
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="200">
           <div class="swiper-wrapper">
@@ -717,7 +714,7 @@
                   <h4>Ceo &amp; Founder</h4>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -733,7 +730,7 @@
                   <h4>Designer</h4>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -749,7 +746,7 @@
                   <h4>Store Owner</h4>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -765,7 +762,7 @@
                   <h4>Freelancer</h4>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -781,7 +778,7 @@
                   <h4>Entrepreneur</h4>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
           </div>
           <div class="swiper-pagination"></div>
@@ -789,7 +786,8 @@
 
       </div>
 
-    </section><!-- End Testimonials Section -->
+    </section> -->
+    <!-- End Testimonials Section -->
 
 
     <!-- ======= Frequently Asked Questions Section ======= -->
