--- a/index.html
+++ b/index.html
@@ -890,14 +890,18 @@
                 <div class="info-box mt-4" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>dskbuildconinfra@gmail.com<br>deepak1997gnl@gmail.com</p>
+                  <p>dskbuildconinfra@gmail.com
+                    <!-- <br>deepak1997gnl@gmail.com -->
+                  </p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Us</h3>
-                  <p>+91 9991160902<br>+91 9896125208</p>
+                  <p>+91 9991160902
+                    <!-- <br>+91 9896125208 -->
+                  </p>
                 </div>
               </div>
             </div>
