--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
 
           <div>
             <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="pic"><img src="" alt=""></div>
+              <!-- <div class="pic"><img src="" alt=""></div> -->
               <h4>SUSHEEL KUMAR</h4>
               <!-- <span>CTO</span> -->
               <div class="social">
